--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,13 +29,13 @@
 
 
 
-                    <android.support.v4.view.ViewPager
+                    <com.yang.foodsearch.view.MyViewPager
                         android:id="@+id/viewpager_main"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="1">
 
-                    </android.support.v4.view.ViewPager>
+                    </com.yang.foodsearch.view.MyViewPager>
 
                     <RadioGroup
                         android:layout_width="match_parent"
